--- a/src/app/articles/Pivoting-Career-Goals/page.mdx
+++ b/src/app/articles/Pivoting-Career-Goals/page.mdx
@@ -15,7 +15,7 @@ export const metadata = {
 
 export default (props) => <ArticleLayout article={article} {...props} />
 
-For the past few years, I've been immersed in web development, building interfaces and crafting user experiences. It's been rewarding work, but lately I've found myself increasingly drawn to a different challenge: artificial intelligence and cloud infrastructure.
+For the past few years, I've been immersed in **web development**, building interfaces and crafting user experiences. It's been rewarding work, but lately I've found myself increasingly drawn to a different challenge: **artificial intelligence** and **cloud infrastructure**.
 
 ## The Turning Point
 
@@ -25,29 +25,29 @@ I didn't want to just use AI tools - I wanted to understand how they work, how t
 
 ## Why AI Engineering?
 
-Machine learning and AI engineering represent a fundamental shift in how we approach problem-solving in software. Instead of explicitly programming every rule and behavior, we're teaching systems to learn patterns and make decisions. This paradigm shift fascinates me.
+Machine learning and AI engineering represent a **fundamental shift** in how we approach problem-solving in software. Instead of explicitly programming every rule and behavior, we're teaching systems to learn patterns and make decisions. This paradigm shift fascinates me.
 
-The field is also incredibly dynamic. Every few months brings new breakthroughs, new architectures, and new possibilities. It's a space where continuous learning isn't just encouraged - it's required.
+The field is also incredibly dynamic. Every few months brings new breakthroughs, new architectures, and new possibilities. It's a space where continuous learning isn't just encouraged—it's **required**.
 
 ## The Cloud Component
 
-You can't talk about modern AI without talking about cloud infrastructure. Training models, serving predictions at scale, managing compute resources - these are all cloud-native challenges. Understanding Azure, AWS, and other cloud platforms has become essential to my journey.
+You can't talk about modern AI without talking about cloud infrastructure. Training models, serving predictions at scale, managing compute resources—these are all cloud-native challenges. Understanding **Azure**, **AWS**, and other cloud platforms has become essential to my journey.
 
-Currently, I'm building an NLP copilot on Azure, which has been an incredible hands-on learning experience. It's one thing to read about cloud services, but actually architecting and deploying AI systems in the cloud teaches you lessons you won't find in documentation.
+Currently, I'm building an **NLP copilot on Azure**, which has been an incredible hands-on learning experience. It's one thing to read about cloud services, but actually architecting and deploying AI systems in the cloud teaches you lessons you won't find in documentation.
 
 ## What I'm Learning
 
 My learning path has been intentional and focused:
 
-- **AI Engineering fundamentals** through Chip Huyen's book - one of the best resources I've found for understanding how to build production AI systems
+- **AI Engineering fundamentals** through Chip Huyen's book—one of the best resources I've found for understanding how to build production AI systems
 - **Cloud infrastructure** with hands-on Azure projects
 - **Practical implementation** by building real applications, not just following tutorials
 
-I'm also revisiting some computer science fundamentals. AI engineering often requires understanding concepts from linear algebra, statistics, and systems design that I didn't focus on as much in web development.
+I'm also revisiting some computer science fundamentals. AI engineering often requires understanding concepts from **linear algebra**, **statistics**, and **systems design** that I didn't focus on as much in web development.
 
 ## The Challenges
 
-This transition hasn't been without its difficulties. The learning curve is steep. AI/ML has its own vocabulary, tooling, and best practices that are quite different from traditional web development. Sometimes I miss the immediate visual feedback of frontend work - training models can mean waiting hours (or days) to see if your approach worked.
+This transition hasn't been without its difficulties. The learning curve is **steep**. AI/ML has its own vocabulary, tooling, and best practices that are quite different from traditional web development. Sometimes I miss the immediate visual feedback of frontend work—training models can mean waiting hours (or days) to see if your approach worked.
 
 Job hunting in this space as someone making a career pivot is also challenging. Many roles want years of specific AI/ML experience, which I'm actively building.
 
@@ -55,19 +55,21 @@ Job hunting in this space as someone making a career pivot is also challenging. 
 
 Despite the challenges, I'm more excited about my career direction than I've been in years. Every day brings new concepts to understand and problems to solve. The field of AI engineering is young enough that there's still room to grow with it, to help shape best practices, and to build things that didn't exist before.
 
-I'm actively seeking my first role in AI engineering or cloud infrastructure. If you're working on interesting problems in this space or know of opportunities, I'd love to connect.
+> I'm actively seeking my first role in AI engineering or cloud infrastructure. If you're working on interesting problems in this space or know of opportunities, I'd love to connect.
 
-The web development skills I've built aren't going away - they're evolving. Understanding how to build great user experiences is still valuable, but now I'm focused on powering those experiences with intelligent systems that can learn, adapt, and scale.
+The web development skills I've built aren't going away—they're **evolving**. Understanding how to build great user experiences is still valuable, but now I'm focused on powering those experiences with intelligent systems that can learn, adapt, and scale.
 
 ## Resources That Have Helped
 
 For anyone else considering a similar pivot, here are some resources that have been invaluable:
 
-- **AI Engineering** by Chip Huyen - comprehensive and practical
-- **Azure Documentation** - better than expected for hands-on learning
-- **Building actual projects** - nothing replaces hands-on experience
-- **The AI/ML community** - incredibly welcoming and willing to help newcomers
+- **[AI Engineering](https://www.oreilly.com/library/view/ai-engineering/9781098166298/)** by Chip Huyen—comprehensive and practical
+- **[Azure Documentation](https://learn.microsoft.com/en-us/azure/)** — better than expected for hands-on learning
+- **Building actual projects** — nothing replaces hands-on experience
+- **The AI/ML community** — incredibly welcoming and willing to help newcomers
+
+---
 
 This is just the beginning of my journey into AI engineering and cloud infrastructure. I'm documenting what I learn along the way, and I hope sharing my experience helps others who are considering a similar path.
 
-The future of software is intelligent, distributed, and cloud-native. I'm excited to be building that future.
+The future of software is **intelligent**, **distributed**, and **cloud-native**. I'm excited to be building that future.
